--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,16 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@react-three/drei": "^9.121.4",
-    "@react-three/fiber": "^8.17.14",
+    "@react-three/fiber": "^9.0.0-alpha.8",
     "@tanstack/react-query": "^5.66.0",
     "6pp": "^1.3.9",
     "class-variance-authority": "^0.7.1",
@@ -35,6 +37,7 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.173.0",
+    "three-globe": "^2.41.12",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
