--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@react-three/fiber": "^9.0.0-alpha.8",
     "@tanstack/react-query": "^5.66.0",
     "6pp": "^1.3.9",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
