update ml commit

--- a/ml/requirements.txt
+++ b/ml/requirements.txt
@@ -1,8 +1,12 @@
-streamlit
-google-generativeai
-python-dotenv
-langchain
+Flask
+Flask-Cors
 PyPDF2
-chromadb
+fpdf
+python-dotenv
+requests
+sqlite3
+langchain
+langchain-community
+langchain-google-genai
+google-generativeai
 faiss-cpu
-langchain_google_genai
