--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@tabler/icons-react": "^3.30.0",
     "@tanstack/react-query": "^5.66.0",
     "6pp": "^1.3.9",
     "axios": "^1.7.9",
@@ -29,9 +30,11 @@
     "framer-motion": "^12.4.1",
     "gsap": "^3.12.7",
     "lucide-react": "^0.475.0",
+    "motion": "^12.4.1",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.5",
     "react-router-dom": "^7.1.5",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1",
