--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@splinetool/react-spline": "^4.0.0",
+    "@splinetool/runtime": "^1.9.63",
     "@tabler/icons-react": "^3.30.0",
     "@tanstack/react-query": "^5.66.0",
     "6pp": "^1.3.9",
