--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-three/drei": "^9.121.4",
+    "@react-three/fiber": "^8.17.14",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.63",
     "@tabler/icons-react": "^3.30.0",
@@ -31,7 +33,9 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.4.1",
     "gsap": "^3.12.7",
+    "lenis": "^1.1.20",
     "lucide-react": "^0.475.0",
+    "maath": "^0.10.8",
     "motion": "^12.4.1",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
@@ -41,6 +45,7 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.173.0",
     "three-globe": "^2.41.12",
     "typewriter-effect": "^2.21.0"
   },
